Sync: Replace histograms Sync.SyncEverything and Sync.CustomSync

...by *2 histograms.
The old histograms had very weird semantics for when samples were taken.
The basic idea was to record only when the state *changed*, which means
that for users that just keep using Sync without changing settings, we'd
never record anything at all. There were also additional oddities around
recording, see bug. Taken together, this makes the old histograms very
hard to interpret.
The new histograms are recorded when Sync configures the data types,
which usually means during Sync startup. These will actually let us
answer questions like "how many users have selected custom data types".

Bug: 895488
Change-Id: Ie67ddebd562c7007b576dcfc962a3bc058bb9452
Reviewed-on: https://chromium-review.googlesource.com/c/1286812
Reviewed-by: Jesse Doherty <jwd@chromium.org>
Reviewed-by: Mikel Astiz <mastiz@chromium.org>
Commit-Queue: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601499}
Former-commit-id: e777bf902b6289e22966ba1d08c6e6f59232b04b